2004-02-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py (FatalConversionError.subst_in_trans):
	conversion rule for \translator{}. Apply everywhere.  

	* lily/parser.yy (music_property_def): set property for \once in
	the PropertyMusic itself, not the ContextSpec.
	(property_operation): change syntax within \translator { }

	* scm/define-music-properties.scm (all-music-properties): clean up.

	* lily/auto-beam-engraver.cc (test_moment): use
	updated_grob_properties() to retrieve autoBeam settings.

	* lily/spacing-spanner.cc: bound shortest_playing_len by
	measure_length

	* lily/spacing-engraver.cc (acknowledge_grob): ignore
	multi-measure events for spacing computation.

	* mf/feta-bolletjes.mf (overdone_heads): make note heads more
	elliptical, to 1.49.

	* lily/rest.cc (polyphonic_offset_callback): new function. Do
	vertical positioning for polyphony, without RestCollision object.

	* lily/note-column.cc (add_head): prevent rests & note heads on
	one stem.

	* lily/rest-collision.cc (do_shift): ignore rests with beams.
	(do_shift): rewrite only-rests case: use common refpoints: the
	routine will have sensible results when other rest-translations
	have taken place.

	* lily/simple-spacer.cc (solve): cleanup: remove code for linelen
	< 0 case. 

	* VERSION: 2.1.22 released
	
	* input/GNUmakefile (SUBDIRS): remove ascii-art

2004-02-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/: Convert ly files that still had \property.  Fixes make
	web.  Remove exta spaces around '='. 

	* scripts/convert-ly.py (conv): Redundant space fixes.

	* scripts/lilypond-book.py (compile-ly): python2.1 fix.

2004-02-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* make/ly-rules.make ($(outdir)/%.pdf): add DVIPS_FLAGS. This will
	create scalable PS and PDFs  for input/{test,template,regression}.

	* lily/context.cc (is_alias): move function.
	(is_alias): add Bottom as context alias. 
	(find_create_translator): add Bottom as a context alias for creation.
